# secure-and-private-ai-products-masterclass

./: .dockerignore  .env.example  .gitignore  01 - Getting Started with Local AI.ipynb  02 - Prompt Engineering and Synthetic Data Generation.ipynb  03 - Basic Evaluation and Failure Modes.ipynb  04 - Input Sanitization with Presidio.ipynb  05 - Generating Example Privacy Tests.ipynb  06 - LLM-Based Prompt Rewriting for Privacy.ipynb  07 - Intro to Red Teaming - Jailbreaking.ipynb  08 - Red Teaming - LLM v LLM.ipynb  09 - Advanced Adversarial Prompt Engineering.ipynb  10 - External Algorithmic Guardrails with Llama Guard.ipynb  11 - Guardrails via LLM as a Judge.ipynb  12 - Comparitive Evaluation and Monitoring.ipynb  13 - Exploring Model Parameters.ipynb  DEVCONTAINER_README.md  Extra - Arize Pheonix.ipynb  Extra - Privacy Router Example.ipynb  Extra - Synthetic Data Generation Examples.ipynb  Extra - System or Meta Prompt Extraction Example.ipynb  README.md  check_torch.py  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  Dockerfile.llamafile  devcontainer.json  docker-compose.yml  llamafile-init.sh  ollama-init.sh
data/: example_personal_data.txt  schrems_wiki.txt
data/meta_prompts/: pantry_chef_prompt  use_case_metaprompt
data/prompts/: syntehtic_initial_prompts.csv
data/templates/: crescendo_prompt  meta_prompt_template
data/traces/: chef_chicken_pasta.json  synthetic_use_case_responses.csv  use_case_with_initial_evaluations.csv
