[project]
name = "masterclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=38.2.0",
    "jupyter>=1.1.1",
    "markdown>=3.10",
    "matplotlib>=3.10.7",
    "ollama>=0.6.1",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]
